--- a/src/app/slides/conclusion-contributions/conclusion-contributions.component.html
+++ b/src/app/slides/conclusion-contributions/conclusion-contributions.component.html
@@ -4,10 +4,14 @@
   <app-two-column-layout>
     <app-list>
       <app-list-item [current]="step" [step]="1">
-        Developed DSL to allow supervisory controller synthesis for robots developed with ROS
+        Presented <span class="emphasize">RoboSC</span>
 
         <app-list>
-          <app-list-item [current]="step" [step]="2">Evaluated approach using 7 different scenarios</app-list-item>
+          <app-list-item [current]="step" [step]="2">Domain-Specific Language</app-list-item>
+          <app-list-item [current]="step" [step]="3">Stimulate use of <span class="emphasize">supervisory controllers</span> for ROS-based applications</app-list-item>
+          <app-list-item [current]="step" [step]="4">Live <span class="emphasize">visualization</span> tools for easier debugging</app-list-item>
+          <app-list-item [current]="step" [step]="5">Use as a <span class="emphasize">supervisory layer</span></app-list-item>
+          <app-list-item [current]="step" [step]="6">Evaluated using <span class="emphasize">7 scenarios</span></app-list-item>
         </app-list>
       </app-list-item>
     </app-list>
