--- a/src/app/slides/concepts-communication/concepts-communication.component.html
+++ b/src/app/slides/concepts-communication/concepts-communication.component.html
@@ -1,7 +1,7 @@
 <app-slide>
   <app-title title="Communication"></app-title>
 
-  <app-running-code-example [code]="code" [start]="6" [end]="11" [current]="step"></app-running-code-example>
+  <app-running-code-example [text]="false" [code]="code" [start]="6" [end]="15" [current]="step"></app-running-code-example>
 
   <app-two-column-layout>
     <app-list>
