--- a/src/app/slides/conclusion-video/conclusion-video.component.html
+++ b/src/app/slides/conclusion-video/conclusion-video.component.html
@@ -1,9 +1,9 @@
 <app-slide>
   <app-title title="Video"></app-title>
 
-  <app-two-column-layout>
-    <app-list>
-
-    </app-list>
-  </app-two-column-layout>
+  <div class="video-wrapper">
+    <video #video width="1280" height="720" controls>
+      <source src="/assets/demonstration-video.mp4" type="video/mp4">
+    </video>
+  </div>
 </app-slide>
