--- a/src/app/slides/opening/opening.component.html
+++ b/src/app/slides/opening/opening.component.html
@@ -2,7 +2,8 @@
   <div class="logo" inlineSVG="/assets/logo.svg"></div>
 
   <div class="title">
-    Model-driven Engineering of Supervisory<br>Controllers for ROS-based applications
+    RoboSC: a domain-specific language for supervisory<br>
+    controller synthesis of ROS-based applications
   </div>
 
   <div class="thesis">Master thesis</div>
@@ -11,6 +12,6 @@
     Bart Wesselink, b.b.a.wesselink@student.tue.nl<br>
     Supervisors: Elena Torta & Ivan Kurtev<br>
     <br>
-    3<sup>rd</sup> committee member: Thomas Neele
+    Third committee member: Thomas Neele
   </div>
 </div>
