--- a/src/app/components/section/section.component.html
+++ b/src/app/components/section/section.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="information">
         <div class="number">{{ number | number:'2.0-0' }}</div>
-        <div class="title">{{ title }}</div>
+        <div class="title">{{ label }}</div>
       </div>
     </ng-container>
   </div>
