--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -1,4 +1,4 @@
 <div class="title" [class.animate]="active" [class.small]="small">
-  {{ title }}
+  {{ label }}
   <span *ngIf="subTitle" class="sub-title">- {{ subTitle }}</span>
 </div>
