--- a/src/app/slides/concepts-base/concepts-base.component.html
+++ b/src/app/slides/concepts-base/concepts-base.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Base"></app-title>
+  <app-title label="Base"></app-title>
 
   <app-running-code-example [code]="code" [start]="7" [end]="8" [current]="step"></app-running-code-example>
 
@@ -8,9 +8,9 @@
       <app-list-item [current]="step" [step]="1">
         Robot
         <app-list>
-          <app-list-item [current]="step" [step]="2">Modelling controller <span class="emphasize">instance</span></app-list-item>
-          <app-list-item [current]="step" [step]="3">Define <span class="emphasize">bindings</span></app-list-item>
-          <app-list-item [current]="step" [step]="4">Specify <span class="emphasize">behaviour</span></app-list-item>
+          <app-list-item [current]="step" [step]="2">Modelling <span class="emphasize">instance</span></app-list-item>
+          <app-list-item [current]="step" [step]="3">Specify <span class="emphasize">behaviour</span></app-list-item>
+          <app-list-item [current]="step" [step]="4">Define <span class="emphasize">communication</span> with middleware</app-list-item>
         </app-list>
       </app-list-item>
       <app-list-item [current]="step" [step]="5">
