--- a/src/app/slides/concepts-components/concepts-components.component.html
+++ b/src/app/slides/concepts-components/concepts-components.component.html
@@ -1,7 +1,7 @@
 <app-slide>
-  <app-title title="Components"></app-title>
+  <app-title label="Components"></app-title>
 
-  <app-running-code-example [code]="code" [start]="6" [end]="9" [current]="step"></app-running-code-example>
+  <app-running-code-example [code]="code" [start]="5" [end]="9" [current]="step"></app-running-code-example>
 
   <app-two-column-layout>
     <app-list>
@@ -14,14 +14,14 @@
           </app-list-item>
         </app-list>
       </app-list-item>
-      <app-list-item [current]="step" [step]="3">
+      <!-- <app-list-item [current]="step" [step]="3">
         Specify <span class="emphasize">communication</span>
-      </app-list-item>
-      <app-list-item [current]="step" [step]="4">
+      </app-list-item> -->
+      <app-list-item [current]="step" [step]="3">
         Define component <span class="emphasize">behaviour</span>
 
         <app-list>
-          <app-list-item [current]="step" [step]="5">
+          <app-list-item [current]="step" [step]="4">
             Using automata
           </app-list-item>
         </app-list>
