--- a/src/app/slides/conclusion-contributions/conclusion-contributions.component.html
+++ b/src/app/slides/conclusion-contributions/conclusion-contributions.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Contributions"></app-title>
+  <app-title label="Contributions"></app-title>
 
   <app-two-column-layout>
     <app-list>
@@ -9,9 +9,10 @@
         <app-list>
           <app-list-item [current]="step" [step]="2">Domain-Specific Language</app-list-item>
           <app-list-item [current]="step" [step]="3">Stimulate use of <span class="emphasize">supervisory controllers</span> for ROS-based applications</app-list-item>
-          <app-list-item [current]="step" [step]="4">Live <span class="emphasize">visualization</span> tools for easier debugging</app-list-item>
-          <app-list-item [current]="step" [step]="5">Use as a <span class="emphasize">supervisory layer</span></app-list-item>
-          <app-list-item [current]="step" [step]="6">Evaluated using <span class="emphasize">7 scenarios</span></app-list-item>
+          <app-list-item [current]="step" [step]="4">For <span class="emphasize">safe</span> development of robot software</app-list-item>
+          <app-list-item [current]="step" [step]="5">Live <span class="emphasize">visualization</span> tools for easier debugging</app-list-item>
+          <app-list-item [current]="step" [step]="6">Use as a <span class="emphasize">supervisory layer</span></app-list-item>
+          <app-list-item [current]="step" [step]="7">Evaluated using <span class="emphasize">8 scenarios</span></app-list-item>
         </app-list>
       </app-list-item>
     </app-list>
