--- a/src/app/slides/conclusion-video/conclusion-video.component.html
+++ b/src/app/slides/conclusion-video/conclusion-video.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Video"></app-title>
+  <app-title label="Video"></app-title>
 
   <div class="video-wrapper">
     <video #video width="1280" height="720" controls>
