--- a/src/app/slides/evaluation-lines-of-code/evaluation-lines-of-code.component.html
+++ b/src/app/slides/evaluation-lines-of-code/evaluation-lines-of-code.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Generated lines"></app-title>
+  <app-title label="Generated lines"></app-title>
 
   <app-two-column-layout>
     <app-list>
