--- a/src/app/slides/introduction-demonstration-robot/introduction-demonstration-robot.component.html
+++ b/src/app/slides/introduction-demonstration-robot/introduction-demonstration-robot.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Presentation robot"></app-title>
+  <app-title label="Presentation robot"></app-title>
 
   <app-two-column-layout>
     <app-list>
@@ -17,7 +17,7 @@
       </app-list-item>
 
       <app-list-item [current]="step" [step]="6">
-          Ontology
+          Components
           <app-list>
             <app-list-item [current]="step" [step]="7">Line & distance sensor</app-list-item>
             <app-list-item [current]="step" [step]="8">Two motors</app-list-item>
