--- a/src/app/slides/introduction-problem/introduction-problem.component.html
+++ b/src/app/slides/introduction-problem/introduction-problem.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Problem"></app-title>
+  <app-title label="Problem"></app-title>
 
   <app-two-column-layout>
     <app-list>
