--- a/src/app/slides/overview-scope/overview-scope.component.html
+++ b/src/app/slides/overview-scope/overview-scope.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Scope"></app-title>
+  <app-title label="Scope"></app-title>
 
   <app-two-column-layout>
     <app-list>
