--- a/src/app/slides/preliminaries-cif/preliminaries-cif.component.html
+++ b/src/app/slides/preliminaries-cif/preliminaries-cif.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="CIF"></app-title>
+  <app-title label="CIF"></app-title>
 
   <app-two-column-layout>
     <app-list>
