--- a/src/app/slides/preliminaries-ros-actions/preliminaries-ros-actions.component.html
+++ b/src/app/slides/preliminaries-ros-actions/preliminaries-ros-actions.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Robot Operating System" subTitle="Actions"></app-title>
+  <app-title label="Robot Operating System" sublabel="Actions"></app-title>
 
   <app-two-column-layout>
     <app-list>
