--- a/src/app/slides/supervisor-idea/supervisor-idea.component.html
+++ b/src/app/slides/supervisor-idea/supervisor-idea.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Idea"></app-title>
+  <app-title label="Idea"></app-title>
 
   <app-two-column-layout>
     <app-list>
@@ -14,7 +14,7 @@
         Check whether controller behaviour is <span class="emphasize">allowed</span>
         <app-list>
           <app-list-item [current]="step" [step]="5">If so: <span class="emphasize">pass on</span> data</app-list-item>
-          <app-list-item [current]="step" [step]="6">If not: <span class="emphasize">block</span>block event</app-list-item>
+          <app-list-item [current]="step" [step]="6">If not: <span class="emphasize">block</span> event</app-list-item>
         </app-list>
       </app-list-item>
     </app-list>
