--- a/src/app/slides/concepts-data/concepts-data.component.html
+++ b/src/app/slides/concepts-data/concepts-data.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Data"></app-title>
+  <app-title label="Data"></app-title>
 
   <app-running-code-example [code]="code" [start]="7" [end]="11" [current]="step"></app-running-code-example>
 
@@ -15,6 +15,7 @@
       </app-list-item>
       <app-list-item [current]="step" [step]="5"><span class="emphasize">Provide</span> statements</app-list-item>
       <app-list-item [current]="step" [step]="6">Variables</app-list-item>
+      <app-list-item [current]="step" [step]="6"><span class="emphasize">Interfaces</span> to link external definitions</app-list-item>
     </app-list>
     <app-figure caption="Partial and simplified of the metamodel of data.">
       <img class="image" src="/assets/concepts-data.svg" width="100%">
