--- a/src/app/slides/evaluation-scenarios/evaluation-scenarios.component.html
+++ b/src/app/slides/evaluation-scenarios/evaluation-scenarios.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Scenarios"></app-title>
+  <app-title label="Scenarios"></app-title>
 
   <app-two-column-layout>
     <app-list>
