--- a/src/app/slides/overview-generation/overview-generation.component.html
+++ b/src/app/slides/overview-generation/overview-generation.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Generation"></app-title>
+  <app-title label="Generation"></app-title>
 
   <app-two-column-layout>
     <app-list>
@@ -27,7 +27,7 @@
         <g fill="none" transform="translate(3.5 .5)">
           <rect width="222" height="69" x="2.5" y="2.5" fill="#EE7773" stroke="#EE7773" stroke-width="5" rx="29"/>
           <text fill="#FFF" font-family="FiraSans-Regular, Fira Sans" font-size="25">
-            <tspan x="91.636" y="46.5">DSL</tspan>
+            <tspan x="52.636" y="46.5">DSL-model</tspan>
           </text>
           <g transform="translate(227 31.658)" class="opacity-transition" [class.opacity-active]="step >= 2">
             <rect width="227" height="74" x="97" y="115.342" stroke="#EE7773" stroke-width="5" rx="29"/>
