--- a/src/app/slides/tools-debugging/tools-debugging.component.html
+++ b/src/app/slides/tools-debugging/tools-debugging.component.html
@@ -1,9 +1,9 @@
 <app-slide>
-  <app-title title="Debugging"></app-title>
+  <app-title label="Debugging"></app-title>
 
   <app-two-column-layout>
     <app-list>
-      <app-list-item [current]="step" [step]="1">View <span class="emphasize">states</span> and <span class="variables">states</span>  of automata</app-list-item>
+      <app-list-item [current]="step" [step]="1">View <span class="emphasize">states</span> and <span class="emphasize">variables</span> of automata</app-list-item>
       <app-list-item [current]="step" [step]="2">Publish state to ROS-topic</app-list-item>
       <app-list-item [current]="step" [step]="3">Create <span class="emphasize">tool</span> that listens to this topic</app-list-item>
       <app-list-item [current]="step" [step]="4">Allow <span class="emphasize">easier</span> understanding of behaviour</app-list-item>
