--- a/src/app/slides/tools-editors/tools-editors.component.html
+++ b/src/app/slides/tools-editors/tools-editors.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title title="Editors"></app-title>
+  <app-title label="Editors"></app-title>
 
   <app-two-column-layout>
     <app-list>
