Add animated graphs

--- a/src/app/slides/introduction-problem/introduction-problem.component.html
+++ b/src/app/slides/introduction-problem/introduction-problem.component.html
@@ -3,7 +3,7 @@
 
   <app-two-column-layout>
     <app-list>
-      <app-list-item [current]="step" [step]="1">Development of <span class="emphasize">safe</span> robots
+      <app-list-item [current]="step" [step]="1">Development of <span class="emphasize">safe software</span> for robots
       </app-list-item>
       <app-list-item [current]="step" [step]="2">
         <span class="emphasize">Manual</span> implementation and (safety) testing takes time
