--- a/src/app/slides/preliminaries-ros-messages/preliminaries-ros-messages.component.html
+++ b/src/app/slides/preliminaries-ros-messages/preliminaries-ros-messages.component.html
@@ -1,5 +1,5 @@
 <app-slide>
-  <app-title label="Robot Operating System" sublabel="Messages"></app-title>
+  <app-title label="Robot Operating System" subTitle="Messages"></app-title>
 
   <app-two-column-layout>
     <app-list>
