--- a/src/app/slides/concepts-communication/concepts-communication.component.html
+++ b/src/app/slides/concepts-communication/concepts-communication.component.html
@@ -1,12 +1,12 @@
 <app-slide>
   <app-title label="Communication"></app-title>
 
-  <app-running-code-example [text]="false" [code]="code" [start]="6" [end]="15" [current]="step"></app-running-code-example>
+  <app-running-code-example [text]="false" [code]="code" [start]="6" [end]="16" [current]="step"></app-running-code-example>
 
   <app-two-column-layout>
     <app-list>
       <app-list-item [current]="step" [step]="1">
-        <span class="emphasize">Middleware</span> communication per component
+        Types of <span class="emphasize">communication</span> per component
 
         <app-list>
           <app-list-item [current]="step" [step]="2">Messages</app-list-item>
