--- a/src/app/slides/concepts-base/concepts-base.component.html
+++ b/src/app/slides/concepts-base/concepts-base.component.html
@@ -8,7 +8,7 @@
       <app-list-item [current]="step" [step]="1">
         Robot
         <app-list>
-          <app-list-item [current]="step" [step]="2">Modelling <span class="emphasize">instance</span></app-list-item>
+          <app-list-item [current]="step" [step]="2">Modelling <span class="emphasize">controller</span></app-list-item>
           <app-list-item [current]="step" [step]="3">Specify <span class="emphasize">behaviour</span></app-list-item>
           <app-list-item [current]="step" [step]="4">Define <span class="emphasize">communication</span> with middleware</app-list-item>
         </app-list>
