--- a/src/app/slides/overview-control-loop/overview-control-loop.component.html
+++ b/src/app/slides/overview-control-loop/overview-control-loop.component.html
@@ -7,7 +7,7 @@
       <app-list-item [current]="step" [step]="2"><span class="emphasize">Shuffle</span> controllable events</app-list-item>
       <app-list-item [current]="step" [step]="3">Ensure data is always <span class="emphasize">up-to-date</span></app-list-item>
       <app-list-item [current]="step" [step]="4">
-        Execute <span class="emphasize">enabled</span> controllable communication event
+        Execute <span class="emphasize">enabled</span> controllable events
         <app-list>
           <app-list-item [current]="step" [step]="5"><span class="emphasize">Communicate</span> with the middleware</app-list-item>
         </app-list>
