--- a/src/app/slides/supervisor-idea/supervisor-idea.component.html
+++ b/src/app/slides/supervisor-idea/supervisor-idea.component.html
@@ -9,12 +9,12 @@
           <app-list-item [current]="step" [step]="2">Use <span class="emphasize">remapping</span></app-list-item>
         </app-list>
       </app-list-item>
-      <app-list-item [current]="step" [step]="3">Update state based on <span class="emphasize">uncontrollable</span> events</app-list-item>
+      <app-list-item [current]="step" [step]="3">Update state based on <span class="emphasize">communication</span> coming from middleware</app-list-item>
       <app-list-item [current]="step" [step]="4">
         Check whether controller behaviour is <span class="emphasize">allowed</span>
         <app-list>
           <app-list-item [current]="step" [step]="5">If so: <span class="emphasize">pass on</span> data</app-list-item>
-          <app-list-item [current]="step" [step]="6">If not: <span class="emphasize">block</span> event</app-list-item>
+          <app-list-item [current]="step" [step]="6">If not: <span class="emphasize">block</span> message</app-list-item>
         </app-list>
       </app-list-item>
     </app-list>
