--- a/src/app/slides/overview-idea/overview-idea.component.html
+++ b/src/app/slides/overview-idea/overview-idea.component.html
@@ -4,7 +4,7 @@
   <app-two-column-layout>
     <app-list>
       <app-list-item [current]="step" [step]="1">
-        Create a <span class="emphasize">supervisory controller</span> to the <span class="emphasize">behaviour</span> of a robot
+        Create a <span class="emphasize">supervisory controller</span> to control the <span class="emphasize">behaviour</span> of a robot
       </app-list-item>
       <app-list-item [current]="step" [step]="2">
         Continue with work done by Kok et al. <app-citation-reference [citation]="kok"></app-citation-reference>
