--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,6 @@
         <app-overview-idea #slide></app-overview-idea>
         <app-overview-main-idea #slide></app-overview-main-idea>
         <app-overview-control-loop #slide></app-overview-control-loop>
-        <app-overview-generation #slide></app-overview-generation>
         <!-- <app-overview-scope #slide></app-overview-scope> -->
       </app-section>
 
@@ -41,6 +40,7 @@
       </app-section>
 
       <app-section [number]="5" label="Tools">
+        <app-tools-generation #slide></app-tools-generation>
         <app-tools-editors #slide></app-tools-editors>
         <app-tools-debugging #slide></app-tools-debugging>
       </app-section>
