--- a/src/app/slides/overview-idea/overview-idea.component.html
+++ b/src/app/slides/overview-idea/overview-idea.component.html
@@ -24,7 +24,7 @@
         </app-list>
         </app-list-item>
     </app-list>
-    <app-figure caption="Inserting a supervisory controller into a robot." [offset]="0" [current]="step" [step]="3">
+    <!-- <app-figure caption="Inserting a supervisory controller into a robot." [offset]="0" [current]="step" [step]="3">
       <svg xmlns="http://www.w3.org/2000/svg" width="600" viewBox="0 0 831 629">
         <g fill="none" fill-rule="evenodd">
           <path fill="#EE7773" fill-rule="nonzero" d="M738.204107,40.6005885 L742.399412,46.204107 L739.597652,48.3017593 L579.417,168.227 L589.006272,181.035627 L546.099749,188.799665 L565.632433,149.816024 L575.221,162.624 L735.402348,42.6982407 L738.204107,40.6005885 Z"/>
@@ -55,7 +55,7 @@
       </svg>
 
 
-    </app-figure>
+    </app-figure> -->
   </app-two-column-layout>
 
   <app-citations>
