--- a/src/app/slides/conclusion-contributions/conclusion-contributions.component.html
+++ b/src/app/slides/conclusion-contributions/conclusion-contributions.component.html
@@ -15,6 +15,8 @@
           <app-list-item [current]="step" [step]="7">Evaluated using <span class="emphasize">8 scenarios</span></app-list-item>
         </app-list>
       </app-list-item>
+      <app-list-item></app-list-item>
+      <app-list-item [current]="step" [step]="8">All code is available on GitHub: <a href="https://github.com/bartwesselink/robosc">https://github.com/bartwesselink/robosc</a></app-list-item>
     </app-list>
   </app-two-column-layout>
 </app-slide>
